[gd_scene load_steps=2 format=3 uid="uid://class_select"]

[ext_resource type="Script" path="res://scripts/ui/class_select.gd" id="1_class"]

[node name="ClassSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_class")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ВЫБЕРИ СВОЙ КЛАСС"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassCardsContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "← Назад"

[node name="SpacerButton" type="Control" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Начать! ▶"

[node name="SelectedIndicator" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
text = "Выбран: Мечник"
horizontal_alignment = 1
